# TapKey

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  qr.rs  server.rs
src-tauri/src/keyboard/: mod.rs
src-tauri/static/: app.js  index.html  manifest.json  style.css
